<resources>
    <string name="app_name">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_welcome">Welcome to Profile</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="hint_email">email@example.com</string>
    <string name="hint_password">123456</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
</resources>
