<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_login_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="javaspin.nl.profile.login.LoginFragment">

    <RelativeLayout
        android:id="@+id/cont_login_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            style="@style/Label.CredentialHeader"
            android:id="@+id/ibl_login_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_welcome"
            android:layout_marginTop="16dp"
            android:gravity="center"
            />

        <TextView
            style="@style/Label.Sub"
            android:id="@+id/ibl_login_email_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:layout_below="@id/ibl_login_header"
            />

        <EditText
            android:id="@+id/edt_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InputField.Credential.Email"
            android:hint="@string/hint_email"
            android:layout_below="@id/ibl_login_email_sub"
            />

        <TextView
            style="@style/Label.Sub"
            android:id="@+id/ibl_login_password_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password"
            android:layout_below="@id/edt_login_email"
            />

        <EditText
            android:id="@+id/edt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InputField.Credential.Password"
            android:hint="@string/hint_password"
            android:layout_below="@id/ibl_login_password_sub"
            />

        <Button
            style="@style/Button.Flat.Primary"
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/action_sign_in"
            android:layout_below="@id/edt_login_password"
            android:layout_centerHorizontal="true"
            />

        <Button
            style="@style/Button.Flat.Primary"
            android:id="@+id/btn_create_account"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/action_register"
            android:layout_below="@id/btn_login"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pro_login_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        />

</FrameLayout>
